# semantic-search-recommendation-mvp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh-TW.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/api/: __init__.py  deps.py
app/api/routes/: auth.py  posts.py  recommend.py  search.py
app/core/: config.py
app/database/: session.py
app/models/: __init__.py  post.py  user.py  user_action.py
app/schemas/: __init__.py  auth.py  post.py  recommend.py  search.py  user_action.py
app/services/: embedding_service.py  jwt_tokens.py  query_expansion.py  recommendation_service.py  search_service.py  vector_db.py
app/tasks/: indexing.py
app/utils/: text_for_embedding.py
docs/: README.md
scripts/: seed_data.py  smoke_api.ps1
static/: demo.html
tests/: test_smoke_import.py
